assets/css/index.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --footer-height: 20%;
}

.inter-regular {
  font-family: "Inter", serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
}

.inter-bold {
  font-family: "Inter", serif;
  font-optical-sizing: auto;
  font-weight: 700;
  font-style: normal;
}

.inter-italic {
  font-family: "Inter", serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: italic;
}

.inter-bold-italic {
  font-family: "Inter", serif;
  font-optical-sizing: auto;
  font-weight: 700;
  font-style: italic;
}

body {
  color: #ffffffca;
  background: #000000;
  position: relative;
  overflow-x: hidden;
  overflow-y: scroll;
}

body::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-image: url("../images/bg-grid.png");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  background-attachment: fixed;
  opacity: 0.1;
  z-index: -1;
}

/* Blob and Blur Effects */
#blob {
  background-color: #f0f0e4;
  height: 24vmax;
  aspect-ratio: 1;
  position: absolute;
  left: 50%;
  top: 50%;
  translate: -50% -50%;
  border-radius: 50%;
  background: linear-gradient(to right, #0015ff, #ff8000);
  filter: blur(8vmax);
  animation: rotate 20s infinite;
  opacity: 0.8;
  z-index: 0;
}

.container {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  justify-content: space-between;
  position: relative; /* To ensure content is layered properly */
  z-index: 2; /* Main content stays above the blob and blur */
}

/* Registrations Closed Banner */

.banner::before {
  content: "Happening Now!";
}

.banner {
  --ch: 33ch;
  --clr: white;
  width: 100%;
  height: 40px;
  color: transparent;
  background-color: #ff8000;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  font-size: 1.2rem;
  text-shadow: calc(var(--ch) * 0) 0 0.5px var(--clr),
    calc(var(--ch) * 1) 0 1px var(--clr), calc(var(--ch) * 2) 0 1px var(--clr),
    calc(var(--ch) * 3) 0 1px var(--clr), calc(var(--ch) * 4) 0 1px var(--clr);
  animation: move 7s linear infinite;
  z-index: 50;
}

@keyframes move {
  to {
    text-shadow: calc(var(--ch) * -1) 0 1px var(--clr),
      calc(var(--ch) * 0) 0 1px var(--clr), calc(var(--ch) * 1) 0 1px var(--clr),
      calc(var(--ch) * 2) 0 1px var(--clr), calc(var(--ch) * 3) 0 1px var(--clr);
  }
}

.header {
  padding: 2rem 3rem;
  display: flex;
  position: sticky;
  top: 0;
  background: #0c0f2931;
  backdrop-filter: blur(10px);
  justify-content: space-between;
  align-items: center;
  z-index: 20; /* Navbar stays above everything */
}

.toggle-button {
  background-color: transparent;
  border: none;
  color: #ff8000;
  cursor: pointer;
}

.toggle-button:hover {
  color: #ff8000;
}

.corner-logo {
  width: 120px;
  height: auto;
}

/* Menu */
.menu-button {
  position: relative;
  z-index: 20;
  width: 30px;
  cursor: pointer;
}

.menu-button > span {
  display: block;
  width: 30px;
  height: 4px;
  margin: 6px 0;
  background-color: #fff;
  transition: 0.4s;
  position: relative;
  z-index: 21;
}

.menu-open .menu-button span:nth-child(1) {
  transform: rotate(45deg) translate(9px, 9px);
  z-index: 21;
}

.menu-open .menu-button span:nth-child(2) {
  opacity: 0;
}

.menu-open .menu-button span:nth-child(3) {
  transform: rotate(-45deg) translate(5px, -5px);
  z-index: 21;
}

.menu-overlay {
  position: fixed;
  top: 0;
  right: -500px;
  width: 500px;
  height: 100%;
  background: #0000008c;
  backdrop-filter: blur(30px);
  transition: right 0.5s ease-in-out;
  z-index: 10;
}

.menu-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
  height: 100%;
  transition: all 0.3s ease-in-out;
}

.menu-content > a {
  color: #f0f0e4;
  text-decoration: none;
  flex-grow: 1;
  text-align: left;
  transition: all 0.3s ease-in-out;
}

.menu-open .menu-overlay {
  right: 0;
  z-index: 10;
}

.nav-menu {
  display: flex;
  flex-direction: column;
  margin: auto;
  padding: clamp(0rem, 12vw, 8rem);
}

.link-menu {
  color: #ffffff82;
  font-family: "Inter", serif;
  font-weight: 700;
  font-style: normal;
  font-size: clamp(2rem, 4vw, 8rem);
  text-decoration: none;
  position: relative;
}

.link-menu:hover {
  font-style: italic;
  color: #ff8000;
}

.span-menu {
  display: block;
  /* border-bottom: 1px solid transparent;
  border-top: 1px solid transparent; */
  position: relative;
  z-index: 2;
  padding: 5px;
}

/* .link-menu:hover > .span-menu {
  border-top-color: #f0f0e4;
  border-bottom-color: #f0f0e4;
} */

/* Popup container */
.popup-container {
  display: none; /* Hidden by default */
  position: fixed;
  z-index: 1000;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.7); /* Dark background */
  justify-content: center;
  align-items: center;
}

/* Popup content */
.popup-content {
  background-color: #fff;
  border-radius: 24px;
  width: 400px;
  padding: 12px;
  text-align: center;
  position: relative;
}

/* Image container */
.popup-image-container {
  margin-bottom: 20px;
}

.popup-image {
  width: 100%;
  height: auto;
  border-radius: 12px;
}

/* Close button */
.close-btn {
  position: absolute;
  height: 40px;
  width: 40px;
  top: 18px;
  right: 18px;
  font-size: 30px;
  cursor: pointer;
  color: #fff;
  background-color: #ff8000cf;
  border-radius: 6px;
}

/* Heading Section */
.hero-section {
  display: flex;
  flex-direction: column;
  padding: 50px;
  text-align: center;
  position: relative;
  z-index: 3; /* Content stays above the effects */
  justify-content: center;
  align-items: center;
}

.hero-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
}

.event-title {
  font-size: 24px;
  color: #ff8000;
}

.logo-container {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  max-width: 600px;
  height: auto;
}

.main-logo {
  max-width: 100%;
  height: auto;
  margin-top: 25px;
  align-items: center;
  z-index: 1;
}

/* .main-logo-blur{
    position: absolute;
    top: 0;
    left: 0;
    margin-top: 25px;
    max-width: 100%;
    height: auto;
    z-index: 1;
} */

.dates {
  font-size: 30px;
  color: #f0f0e4;
  margin: 20px 0;
  transition: text-shadow 0.3s ease-in-out;
}

.location {
  font-size: 30px;
  color: #f0f0e4;
  margin: 20px 0;
}

/* .location:hover, .dates:hover, .event-title:hover {
  text-shadow: 0 0 10px #ff8000, 0 0 20px #ff8000, 0 0 30px #ff8000;
} */

/* Landing Footer Section */

.footer {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  padding: 2rem;
  background: #ffffff1a; /* Light transparent background */
  backdrop-filter: blur(10px); /* Blurring effect behind the footer */
  -webkit-backdrop-filter: blur(10px);
  border-radius: 50px 50px 0 0; /* Rounded corners */
  border: 1px solid #ffffff33; /* Light border to enhance the glass effect */
  box-shadow: 0 4px 10px #0000004d; /* Slight shadow for depth */
  color: #f0f0e4;
  height: var(--footer-height); /* Use the variable for height */
  z-index: 3; /* Footer stays above the effects */
  overflow-x: hidden;
}

.footer-partners {
  display: flex;
  flex-wrap: wrap;
  justify-content: center; /* Center the awards horizontally */
  align-items: center;
  gap: 30px; /* Adjust spacing between awards */
  padding: 20px 0;
  max-height: 30vh; /* Limit the awards section to not exceed half the viewport height */
}

.partner-item {
  flex: 1 1 auto; /* Allow items to grow and shrink evenly */
  display: flex;
  align-items: center;
  justify-content: center;
}

.partner-item img {
  max-width: 100%; /* Ensure images scale within their container */
  object-fit: contain; /* Maintain aspect ratio */
}

@media (min-width: 1024px) {
  .menu-overlay {
    width: 500px;
    right: -500px;
  }

  .menu-open .menu-overlay {
    right: 0;
  }
}

/* Media Queries */

/* Full-Screen Menu for Mobile */
@media (max-width: 1023px) {
  .menu-overlay {
    right: -100%;
    width: 100%;
  }

  .menu-open .menu-overlay {
    right: 0;
  }

  .menu-content {
    text-align: center;
  }

  .banner::before {
    content: "Happening Now!";
  }
}

@media only screen and (max-width: 900px) {
  .hero-content {
    text-align: center;
    align-items: center;
    margin-left: 0px;
  }
  .main-logo {
    max-width: 100%;
  }

  .footer-partners {
    flex-direction: column; /* Stack awards vertically */
    gap: 10px;
  }

  .partner-item img {
    height: 60px; /* Further reduce image size for small screens */
  }

  .corner-logo {
    max-width: 15vw; /* Adjust for smaller screens */
    top: 10px;
    left: 10px;
  }
}

@media only screen and (max-width: 480px) {
  .hero-content {
    text-align: center;
    align-items: center;
    margin-left: 0px;
  }
  .main-logo {
    max-width: 100%;
  }

  .corner-logo {
    max-width: 20vw;
  }

  .footer-partners {
    gap: 5px;
    padding: 10px 0;
  }

  .partner-item img {
    height: 50px; /* Shrink images for very small screens */
  }
}

@media (min-width: 768px) {
  .footer-partners {
    flex-wrap: nowrap;
    gap: 50px;
  }
}

